--- a/index.html
+++ b/index.html
@@ -1012,7 +1012,7 @@
     document.getElementById('splash-screen').classList.add('hidden'); // Add fade-out effect
     setTimeout(function() {
         document.getElementById('splash-screen').style.display = 'none'; // Hide after fading out
-        document.getElementById('mie_ride_banner').style.display = 'block'; // Show the main content
+        document.getElementById('header').style.display = 'block'; // Show the main content
         document.getElementById('mie_ride_banner').style.display = 'block'; // Show the main content
         document.getElementById('main').style.display = 'block'; // Show the main content
     }, 1000); // Time for the fade-out transition to complete
