--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
       <div id="splash-screen">
-        <img src="./public/assets/icons/mie-ride.jpg" width="100%" height="100%" alt="mei">    
+        <img src="./public/assets/icons/mie-ride.jpg" width="100%" height="100%" class="img-fluid" alt="mei">    
       </div>
 
        
