--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             rel="stylesheet"
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous"/>
+            <link rel="icon" type="image/x-icon" href="./public/assets/icons/favicon.png" />
 
         <link rel="stylesheet" type="text/css" href="./public/css/index.css">
     </head>
@@ -25,7 +26,7 @@
       
         <header class="w-100" id="header" style="display: none;">
             <div class="main-header p-0 m-0">
-                <div class="top-band py-3 w-100"></div>
+                <div class="top-band py-2 w-100"></div>
                 <div class='main_navbar p-0 m-0'>
                   <div class='row p-0 m-0'>
                     <div class='container-fluid p-0 m-0'>
