--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                      <h4 class="text-center text-uppercase">benifits</h4>
                    </div>
                    <div class=" d-block d-lg-none">
-                    <h5 class="py-3 text-center">User</h5>
+                    <h5 class="py-3 ">User</h5>
                   </div>
  
                    <div class="benifits_row_one">
@@ -537,7 +537,7 @@
 
                         <div class="mie_ride_features_desc w-100">
                             <div class="row ">
-                                <div class="col-md-4" >
+                                <div class="col-md-4 col-11" >
                                   <div class="row">
                                     <div  class="col-md-10 col-9 mx-lg-auto ml-auto">
                                       <div class="">
@@ -559,7 +559,7 @@
                                   </div>
                                   
                                 </div>
-                                <div class="col-md-4">
+                                <div class="col-md-4 col-11 ms-auto">
                                   <div class="row">
                                     <div class="col-md-10 col-9 ms-auto mx-lg-auto">
                                       <div class="">
@@ -581,7 +581,7 @@
                                   </div>
                                   
                                 </div>
-                                <div class="col-md-4">
+                                <div class="col-md-4 col-11">
                                   <div class="row">
                                     <div class="col-md-10 col-9 mx-lg-auto ml-auto ">
                                       <div class="">
@@ -734,7 +734,7 @@
                    </div>
                  </div>
                  <div class="w-100 py-2 d-flex justify-content-center align-items-center" style="background-color: #ffc61d; color: #000;">
-                  <p class="text-uppercase p-0 m-0">Reserve your spot now—contact us at advertising@mieride.ca</p>
+                  <p class="text-uppercase p-0 m-0 reserve_text">Reserve your spot now—contact us at advertising@mieride.ca</p>
                  </div>
                </section>
  
