--- a/index.html
+++ b/index.html
@@ -34,8 +34,16 @@
                       <div class='row p-0 m-0'>
                         <div class='col-md-2 p-0 m-0'>
                           <div class="logo_section">
-                            <img src="./public/assets/icons/favicon.png" class="img-fluid" alt="logo" height="40px" style="color: black;"><span>Mie Ride</span>
+
+                            <div class="">
+                              <img src="./public/assets/icons/favicon.png" class="img-fluid" alt="logo" height="40px" style="color: black;"><span>Mie Ride</span>
+                            </div>
+                            <div class="mx-2">
+                              <img src="./public/assets/icons/burger-bar.png" class="img-fluid" alt="logo" height="30px" style="color: black;">
+                            </div>
+                          
                           </div>
+
                         </div>
                         <div class='col-md-10 p-0 m-0'>
                           <nav class="navbar navbar-expand-lg d-none d-md-block w-100">
