--- a/index.html
+++ b/index.html
@@ -16,8 +16,32 @@
     <body>
 
 
-      <div id="splash-screen">
-        <img src="./public/assets/icons/mie-ride.jpg" width="100%" height="100%" class="img-fluid" alt="mei">    
+      <div id="splash-screen"  class="splash_screen">
+        <div class="row">
+          <div class="col-md-10 mx-auto">
+            <div class="main_splash_screen">
+              <div class="">
+                <div class="miefinal">
+                  <img src="./public/assets/icons/miefinal.png" class="img-fluid" alt="find">
+                </div>
+                <div class="welcome_message">
+                  <p>welcome to mie ride</p>
+                </div>
+                <div class="main_splash_screen_details">
+                  <p>Your advanced, fixed-price ride solution for travelers, students, and professionals.
+                     Our unique ride-sharing platform connects passengers with drivers heading the same way, offering a more affordable, efficient, and environmentally-friendly mode of transportation.
+                     Whether you’re looking for a shared ride, a personal trip, or even a quick airport transfer, we’ve got you covered!</p>
+  
+                </div>
+                <div class="scroll_imag">
+                  <img src="./public/assets/icons/scroll.png" class="img-fluid">
+  
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
       </div>
 
        
@@ -35,10 +59,11 @@
                         <div class='col-md-2 p-0 m-0'>
                           <div class="logo_section">
 
-                            <div class="">
-                              <img src="./public/assets/icons/favicon.png" class="img-fluid" alt="logo" height="40px" style="color: black;"><span>Mie Ride</span>
+                            <div class=" d-flex justify-content-center align-items-center">
+                              <img src="./public/assets/icons/favicon.png" class="img-fluid" alt="logo" height="30px" style="color: black;">
+                              <span>Mie Ride</span>
                             </div>
-                            <div class="mx-2">
+                            <div class="mx-2 d-block d-md-none">
                               <img src="./public/assets/icons/burger-bar.png" class="img-fluid" alt="logo" height="30px" style="color: black;">
                             </div>
                           
