--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
         
 
-        <!-- <main id="main" >
+        <main id="main" >
 
             <section  id="about-us" class="mie_ride_about">
                 <div class="row p-0 m-0">
@@ -1046,7 +1046,7 @@
 
 
               
-        </main> -->
+        </main>
 
 
         <!-- <button onclick="topFunction()" id="service_myBtn" title="Go to top">Top</button> -->
