--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                                  
                                  We also offer full-time opportunities for drivers and have launched our services in Ontario, Canada. 
 
-                                Join us on our journey to revolutionize local travel!
+                                Join us on our journey to revolutionize local travel!</p>
                               
                             </div>
                         </div>
