--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
                      Whether you’re looking for a shared ride, a personal trip, or even a quick airport transfer, we’ve got you covered!</p>
   
                 </div>
-                <div class="scroll_imag">
+                <div class="scroll_imag " id="toggleButton">
                   <img src="./public/assets/icons/scroll.png" class="img-fluid">
-  
                 </div>
               </div>
 
