--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                 <div class="row p-0 m-0">
                  <div class="col-md-11 mx-auto ">
                    <div class="mie_ride_benifits_title">
-                     <h4 class="text-center text-uppercase">benifits</h4>
+                     <h4 class="text-center text-uppercase">benefits</h4>
                    </div>
           
  
