--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@
                      </div>
                    </div>
                  </div>
-                 <div class="w-100 py-2 d-flex justify-content-center align-items-center" style="background-color: #ffc61d; color: #000;">
+                 <div class="w-100 py-3 d-flex justify-content-center align-items-center" style="background-color: #ffc61d; color: #000;">
                   <p class="text-uppercase p-0 m-0 reserve_text">Reserve your spot now—contact us at advertising@mieride.ca</p>
                  </div>
                </section>
@@ -804,7 +804,7 @@
 
                <section id="download" class="mie_ride_download mb-3">
                 <div class="row p-0 m-0">
-                  <div class="col-md-10 mx-auto">
+                  <div class="col-md-9 mx-auto">
                     <div class="mie_ride_download_title">
                       <h4 class="text-uppercase"> download now </h4>
                        <p> Experience Mie Ride today! </p>  
@@ -867,7 +867,7 @@
                                       <img src="./public/assets/images/circul1.png" class="img-fluid app_details_circul_image" >
                                     </div>
                                    <div class="app_details_title">
-                                    <h2>DOWNLOAD</h2>
+                                    <!-- <h2>DOWNLOAD</h2> -->
                                     <p><b>GET</b> <br> THE <br>DRIVER  APP</p>
                                    </div>
 
@@ -1047,7 +1047,7 @@
                                          
                                       <div class="Chart_Message">
                                         <button type="button" class="btn Chart_Message_btn rounded-0">
-                                          <a href="https://api.whatsapp.com/send?phone=8868803285&text=*Mie Ride* We need more information ride" className='clist'>
+                                          <a href="https://api.whatsapp.com/send?phone=00&text=*Mie Ride* We need more information ride" className='clist'>
                                             <img src="./public/assets/images/whatsapp.png" height="20px" width="20px"  alt="whatsapp">  
                                             Start Live Chart
                                           </a>
