--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
                             </div> 
                             <div class="col-md-6 col-3  d-block d-lg-none">
                               <div class="user_text_section">
-                                <img src="./public/assets/icons/User.png" class="img-fluid" alt="user" >
+                                <img src="./public/assets/icons/User.png" class="img-fluid user_text" alt="user" >
                               </div>
                             </div> 
                           </div>
@@ -459,7 +459,7 @@
                      <div class="row">
                        <div class="col-lg-2 d-none d-lg-block">
                          <div class="driver_text_section">
-                           <img src="./public/assets/icons/driver1.png" class="img-fluid" alt="driver">
+                           <img src="./public/assets/icons/driver1.png" class="img-fluid driver_text" alt="driver">
                          </div>
                        </div>
                      <div class="col-md-10">
@@ -532,7 +532,7 @@
                           <div class="row">
                             <div class="col-md-6 col-3 d-block d-lg-none">
                               <div class="driver_text_section">
-                                <img src="./public/assets/icons/driver.png" class="img-fluid" alt="driver">
+                                <img src="./public/assets/icons/driver1.png" class="img-fluid" alt="driver">
                               </div>
                             </div>
                             <div class="col-md-6 col-3">
@@ -1039,7 +1039,7 @@
                                   <div class="col-md-12">
                                     <div class="mb-3 form_btn">
                                       <div class="Send_Message d-flex justify-content-center w-100 " >
-                                     <button type="button" class="btn Send_Message_btn  rounded-0">Send Message</button>
+                                     <button type="button" class="btn Send_Message_btn  rounded-0" onclick="Enquiry()">Send Message</button>
                                       </div>
                                       <!-- <div class="OR">
                                         <span >OR</span>
