--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 
              
 
-              <section  id="benifits" class="mie_ride_benifits  w-100 mb-3">
+              <section  id="benefits" class="mie_ride_benifits  w-100 mb-3">
                 <div class="row p-0 m-0">
                  <div class="col-md-11 mx-auto ">
                    <div class="mie_ride_benifits_title">
@@ -576,7 +576,7 @@
  
                </section>
 
-               <section  id="features" class="mie_ride_features w-100 mb-3 ">
+               <section  id="features"  class="mie_ride_features w-100 mb-3 ">
                 <div class="row p-0 m-0">
                     <div class="col-md-11 mx-auto">
                         <div class="text-center text-title main_title_line ">
@@ -663,7 +663,7 @@
                 </div>
               </section> 
 
-               <section  id="advertise" class="mie_ride_advertise mb-3 w-100">
+               <section  id="advertise-with-us" class="mie_ride_advertise mb-3 w-100">
                  <div class="row p-0 m-0">
                    <div class="col-md-11 mx-auto">
                     <div class="mie_ride_advertise_title">
@@ -836,7 +836,7 @@
                                   <a href="https://apps.apple.com/ca/app/mie-ride/id6639612972">
                                     <img src="./public/assets/icons/appale.png" alt="Google Play" class="store-logo">
                                   </a>
-                                      <a href="https://apps.apple.com/ca/app/mie-ride-driver/id6642649782">
+                                      <a href="https://play.google.com/store/apps/details?id=com.app.mieride">
                                         <img src="./public/assets/icons/android.svg" alt="Google Play" class="store-logo">
                                       </a>
                               </div>
@@ -873,7 +873,7 @@
 
                                   <div class="store_main">
                                     <div class="store-logos">
-                                      <a href="https://apps.apple.com/ca/app/mie-ride/id6639612972">
+                                      <a href="https://play.google.com/store/apps/details?id=com.app.mieridedriver">
                                         <img src="./public/assets/icons/appale.png" alt="Google Play" class="store-logo">
                                       </a>
                                           <a href="https://apps.apple.com/ca/app/mie-ride-driver/id6642649782">
@@ -1008,7 +1008,7 @@
                               <p class="text-uppercase contact-form-title">Got Questions? We're here to help</p>
                               <form>
                                 <div class="row">
-                                  <p class="text-center text-capitalize text-success" id="succes_message"></p>
+                                  <p class="text-center text-capitalize  text-success" id="succes_message"></p>
                                   <div class="col-md-6">
                                     <div class="mb-3">
                                       <input type="text" maxlength="150"  class="form-control rounded-0" placeholder="First Name" id="First_Name">
