--- a/index.html
+++ b/index.html
@@ -938,7 +938,7 @@
                       <div class="col-md-12 mx-auto">
                         
                         <div class="row">
-                          <div class="col-md-6">
+                          <div class="col-md-6 mb-3">
                             <div class="contact_form_left">
                             <div class="row py-2">
                               <div class="col-md-6 col-6">
@@ -1003,12 +1003,12 @@
                             </div>
                           </div>
                           </div>
-                          <div class="col-md-6">
+                          <div class="col-md-6 mb-3">
                             <div class="contact-form">
                               <p class="text-uppercase contact-form-title">Got Questions? We're here to help</p>
                               <form>
                                 <div class="row">
-                                  <p class="text-center text-capitalize  text-success" id="succes_message"></p>
+                                  <p class="text-center text-capitalize text-success" id="succes_message"></p>
                                   <div class="col-md-6">
                                     <div class="mb-3">
                                       <input type="text" maxlength="150"  class="form-control rounded-0" placeholder="First Name" id="First_Name">
