--- a/index.html
+++ b/index.html
@@ -873,10 +873,10 @@
 
                                   <div class="store_main">
                                     <div class="store-logos">
-                                      <a href="https://play.google.com/store/apps/details?id=com.app.mieridedriver">
+                                      <a href="https://apps.apple.com/ca/app/mie-ride-driver/id6642649782">
                                         <img src="./public/assets/icons/appale.png" alt="Google Play" class="store-logo">
                                       </a>
-                                          <a href="https://apps.apple.com/ca/app/mie-ride-driver/id6642649782">
+                                          <a href= https://play.google.com/store/apps/details?id=com.app.mieridedriver">
                                             <img src="./public/assets/icons/android.svg" alt="Google Play" class="store-logo">
                                           </a>
                                          
