--- a/test.html
+++ b/test.html
@@ -320,7 +320,7 @@
                               <div class="number_icon_2">
                                <img src="./public/assets/icons/circul.png" class="img-fluid" alt="one">
                               </div>
-                              <div class="number_icon_title">
+                              <div class="number_icon_title_up">
                                 <p>Fixed<br>
                                   pricing<br> 
                                   helps in<br> 
@@ -446,7 +446,7 @@
                               <div class="number_icon_2">
                                <img src="./public/assets/icons/circul.png" class="img-fluid" alt="one">
                               </div>
-                              <div class="number_icon_title">
+                              <div class="number_icon_title_up">
                               <p>Choose <br>
                                 Interac or <br>
                                 direct<br> 
