--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="./test.css">  
 </head>
 <body>
-    <header class="w-100 header " id="header" >
+    <!-- <header class="w-100 header " id="header" >
         <div class="main-header p-0 m-0">
             <div class='main_navbar p-0 m-0'>
               <div class='row p-0 m-0'>
@@ -74,8 +74,8 @@
     </header>  
 
     <section class="mie_ride_banner"  id="mie_ride_banner"  > 
-        <div class="banner_main" >  
-         <div class="row p-0 m-0">
+        <div class="banner_main w-100" >  
+         <div class="row p-0 m-0 ">
          <div class="col-md-11 col-11 mx-auto p-0 m-0"> 
       <div class="main_banner" >
       <div id="BannerIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -118,9 +118,9 @@
         </div>
     </div>
    
-  </section>
+  </section> -->
 
-  <div id="services" class="mie_ride_service">
+  <section id="services" class="mie_ride_service w-100">
     <div class="container-fluid p-0 m-0">
       <div class="row p-0 m-0">
         <div class="col-md-11 mx-auto">
@@ -277,8 +277,7 @@
 
         </div>
       </div>
-
-    </div>
+    </section>
 
 
     <section  id="benefits" class="mie_ride_benifits w-100">
@@ -588,7 +587,7 @@
                         </div>
                         
                       </div>
-                      <div class="col-md-4   mx-lg-auto ">
+                      <div class="col-md-4 mx-lg-auto ">
                         <div class="row p-0 m-0">
                           <div class="col-md-11 col-10 p-0 m-0 ml-auto">
                             <div class="">
