--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="./test.css">  
 </head>
 <body>
-    <!-- <header class="w-100 header " id="header" >
+     <header class="w-100 header " id="header" >
         <div class="main-header p-0 m-0">
             <div class='main_navbar p-0 m-0'>
               <div class='row p-0 m-0'>
@@ -118,7 +118,7 @@
         </div>
     </div>
    
-  </section> -->
+  </section> 
 
   <section id="services" class="mie_ride_service w-100">
     <div class="container-fluid p-0 m-0">
