--- a/test.html
+++ b/test.html
@@ -73,7 +73,7 @@
           </div>
     </header>  
 
-    <section class="mie_ride_banner"  id="mie_ride_banner"  > 
+    <section class="mie_ride_banner"  id="mie_ride_banner w-100"  > 
         <div class="banner_main w-100" >  
          <div class="row p-0 m-0 ">
          <div class="col-md-11 col-11 mx-auto p-0 m-0"> 
@@ -86,7 +86,7 @@
     </div>
 </section>
 
-<section  id="about-us" class="mie_ride_about">          
+<section  id="about-us" class="mie_ride_about w-100">          
     <div class="p-0 m-0">
         <div class="row p-0 m-0">
             <div class="col-md-11 mx-auto">
@@ -121,8 +121,8 @@
   </section> 
 
   <section id="services" class="mie_ride_service w-100">
-    <div class="container-fluid p-0 m-0">
-      <div class="row p-0 m-0">
+    <div class="p-0 m-0 w-100">
+      <div class="row p-0 m-0 w-100">
         <div class="col-md-11 mx-auto">
         <div class="text-center main_title_line">
           <h4 class="text-uppercase">services</h4>
@@ -532,7 +532,7 @@
        </div>
     </section>
     
-    <div  id="features"  class="mie_ride_features w-100 ">
+    <section  id="features"  class="mie_ride_features w-100 ">
       <div class="row p-0 m-0 w-100">
           <div class="col-md-11 mx-auto">
               <div class="text-center text-title main_title_line ">
@@ -617,7 +617,7 @@
 
           </div>
       </div>
-    </div>  
+    </section>  
 
 
     <section class="section" id="contact">
