--- a/test.html
+++ b/test.html
@@ -908,18 +908,18 @@
            
          </div>
 
-         <div class="col-md-11">
+         <div class="col-md-11 mx-auto">
            <div class="row">
              <div class="col-md-12 mx-auto">
-               
                <div class="row">
                  <div class="col-md-6 mb-3">
                    <div class="contact_form_left">
-                   <div class="row py-2">
+                   <div class="row">
                      <div class="col-md-6 col-6">
                        <div class="contact_location">
                          <div class="">
-                           <img src="./public/assets/icons/location.png" class="img-fluid" alt="location" height="20" width="20"> <span>Our Adderess</span>
+                           <img src="./public/assets/icons/location.png" class="img-fluid" alt="location" height="20" width="20">
+                            <span>Our Adderess</span>
                          </div>
                          <div class="icon_text">
                            <b>Toronto, ON</b>
