--- a/test.html
+++ b/test.html
@@ -932,7 +932,10 @@
                            <img src="./public/assets/icons/email.png" class="img-fluid" alt="location" height="20" width="20"> <span>Mail Us</span>
                          </div>
                          <div class="icon_text">
-                           <b>info@mieride.ca</b>
+                          <a href="mailto:info@mieride.ca" target="_blank" style="text-decoration: none; color: black;">
+                            <b>info@mieride.ca</b>
+                          </a>
+                          
                          </div>
                        </div>
                      </div>
@@ -954,7 +957,7 @@
                            <img src="./public/assets/icons/information-button.png" class="img-fluid" alt="information-button" height="20" width="20"> <span>your guide to mie ride</span>
                          </div>
                          <div class="icon_text">
-                          <a href="https://linktr.ee/mieride.ca" style="text-decoration: none; color: black;">
+                          <a href="https://linktr.ee/mieride.ca" target="_blank" style="text-decoration: none; color: black;">
                            <b>https://linktr.ee/mieride.ca</b>
                           </a>
                          </div>
@@ -1058,6 +1061,11 @@
         }
 
       </script>
+       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+       crossorigin="anonymous"></script>
+       
+       <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 
     <script src="./public/js/index.js"></script>
 </body>
