--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 <section  id="about-us" class="mie_ride_about w-100">          
     <div class="p-0 m-0">
         <div class="row p-0 m-0">
-            <div class="col-md-11 mx-auto">
+            <div class="col-md-11 col-11 mx-auto">
                 <div class="text-center main_title_line">
                 <h4 class=" text-uppercase">About Us</h4>
                 <p class="">"Your Advanced, Fixed-Price Ride Solution for Travelers, Students, and Professionals"</p>
@@ -102,7 +102,7 @@
     
         <div class="mie_ride_about_desc">
             <div class="row p-0 m-0">
-                <div class="col-md-9 mx-auto">
+                <div class="col-md-9 col-11 mx-auto">
                     <div class="mie_ride_about_desc_text">
                       <p>
                         We are a fixed-price ride-sharing app company dedicated to reducing transportation costs and saving time for local commuters. 
@@ -286,13 +286,11 @@
        <section  id="benefits" class="mie_ride_benifits w-100">
        <div class="w-100">
         <div class="row p-0 m-0 w-100">
-            <div class="col-md-11 mx-auto ">
+            <div class="col-md-11  mx-auto ">
               <div class="mie_ride_benifits_title ">
                 <h4 class="text-center text-uppercase">benefits</h4>
               </div>
      
-
-   
               <div class="benifits_row_one benifits_row_one_1 ">
                 <div class="row benifits_row ">
                 <div class="col-md-10 ">
